Bug 14668 - %U variable expansion not working in spoolsd
Summary: %U variable expansion not working in spoolsd
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Ralph Böhme
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-11 14:16 UTC by Ralph Böhme
Modified: 2026-03-31 03:39 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2021-03-11 14:16:54 UTC
When configuring printing to use spoolssd variable expansion of %U (and %u and %D) is not working.

Have patch, need bugnumber.
Comment 1 Samba QA Contact 2021-03-12 00:55:03 UTC
This bug was referenced in samba master:

7662a77c4cb473c431386c9b8014e846bc5e5882
16a1aefb72f3cf2093f2cffe1bd0e2483b761e6f
Comment 2 Samba QA Contact 2021-03-16 22:09:05 UTC
This bug was referenced in samba master:

78208c62c154545fc45d87bfce24c5fffd1e33d9
Comment 3 Jennifer Sutton 2026-03-31 03:39:15 UTC
Closing as fixed.